--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -9,5 +9,6 @@ jobs:
   fetch-build-and-update:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: sh update-tzdata.sh
       - shell: bash
