--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,4 +1,5 @@
 # This workflow will update the timezone data from the official database and can only be triggered manually
+# requires to set environment variable tzVersion
 
 name: update tz data
 
@@ -10,6 +11,5 @@ jobs:
   fetch-build-and-update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: sh update-tzdata.sh
-      - shell: bash
+      - uses: actions/checkout@v3
+      - run: bash  update-tzdata.sh ${{secrets.tzVersion}}
