--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -5,11 +5,12 @@ name: update tz data
 
 on:
   workflow_dispatch:
-    branches: [dev]
+    branches:
+      - 'dev'
 
 jobs:
   fetch-build-and-update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: bash  update-tzdata.sh ${{secrets.tzVersion}}
+      - run: bash  ${GITHUB_WORKSPACE}/update-tzdata.sh ${{secrets.tzVersion}}
