--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,13 +3,21 @@
 
 name: update tz data
 
-on:
-  workflow_dispatch
+on: workflow_dispatch
 
 jobs:
   fetch-build-and-update:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/dev'
     steps:
-      - uses: actions/checkout@v3
-      - run: bash ${GITHUB_WORKSPACE}/update-tzdata.sh ${{secrets.tzVersion}}
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: update
+        run: bash ${GITHUB_WORKSPACE}/update-tzdata.sh ${{secrets.tzVersion}}
+      - name: commit
+        run: |
+          git config --global user.name 'Jens Kuerschner' 
+          git config --global user.email 'mail@jenskuerschner.de'
+          git add -A
+          git commit -m '[automated commit] tz data update'
+          git push
