--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Visual Studio Code from https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.gitignore
+# Adjust to your needs.
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code.
+.history/
+
+# node_modules.
+node_modules/
+
+# C build files
 ChangesVzic
 RulesPerl
 RulesVzic
@@ -7,4 +24,3 @@ test-vzic
 vzic
 *.o
 *~
-node_modules/
