--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 package-lock.json linguist-generated=true -diff
+dist/**/* linguist-generated=true -diff
 npm_dist/**/* linguist-generated=true -diff
