--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,10 +1,10 @@
 name: 'CodeQL Analysis'
 
 on:
-  push:
-    branches: [dev]
   pull_request:
     branches: [main, dev]
+  workflow_dispatch:
+    branches: [dev]
   schedule:
     - cron: '31 11 * * 0'
 
