--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "types": "index.d.ts",
+  "jsdelivr": "./dist/tzlib.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/add2cal/timezones-ical-library.git"
