--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
   "scripts": {
     "release": "node set-release.js",
     "test": "node test/tests.js",
+    "generate-db": "node generator.js",
     "build-npm": "npx grunt npm",
     "build": "npx grunt"
   },
   "devDependencies": {
+    "glob": "^8.0.3",
     "grunt": ">=1.5.3",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-copy": "^1.0.0",
