--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "grunt": ">=1.5.3",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-file-creator": "^0.1.3",
     "grunt-version": "^3.0.0"
   }
