license and style updates

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "name": "Jens Kuerschner",
     "url": "https://jenskuerschner.de/"
   },
-  "license": "GPL-3.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/add2cal/timezones-ical-library/issues"
   },
