bundle size optimization with lot of open TODOs

--- a/.npmignore
+++ b/.npmignore
@@ -16,6 +16,9 @@ set-release.js
 test/
 package-lock.json
 sitemap.xml
+*.min.css
+*.min.js
+*.map
 
 # plus all the maker stuff, which is not already ignored for Git
 
