--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timezones-ical-library",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "engines": {
     "node": ">=14.20.0"
   },
@@ -54,11 +54,24 @@
   "homepage": "https://tz.add-to-calendar-technology.com/",
   "scripts": {
     "release": "node set-release.js",
+    "stylelint": "npx stylelint demo_assets/css/*.css",
+    "stylelint:fix": "npm run stylelint -- --fix",
+    "eslint": "npx eslint .",
+    "eslint:fix": "npm run eslint -- --fix",
+    "prettier": "npx prettier . --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run eslint:fix && npm run prettier:fix && npm run stylelint:fix",
     "test": "node test/tests.js",
     "build-npm": "npx grunt npm",
     "build": "npx grunt"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-commonjs": "^1.0.2",
+    "eslint-plugin-security": "^1.5.0",
     "glob": "^8.0.3",
     "grunt": ">=1.5.3",
     "grunt-contrib-clean": "^2.0.1",
@@ -66,6 +79,10 @@
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-file-creator": "^0.1.3",
-    "grunt-version": "^3.0.0"
+    "grunt-version": "^3.0.0",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.13.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^28.0.0"
   }
 }
