--- a/.npmignore
+++ b/.npmignore
@@ -23,8 +23,7 @@ sitemap.xml
 # plus all the maker stuff, which is not already ignored for Git
 
 tzdata/
-api/*.ics
-api/*/
+api/
 Makefile
 *.c
 *.tab
