--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "timezones-ical-library",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "engines": {
     "node": ">=14.20.0"
   },
   "description": "Easy direct access to the most recent official timezone information for iCalendar files via JavaScript",
-  "main": "npm_dist/cjs/index.js",
-  "module": "npm_dist/mjs/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/mjs/index.js",
   "exports": {
     ".": {
-      "import": "./npm_dist/mjs/index.js",
-      "require": "./npm_dist/cjs/index.js"
+      "import": "./dist/mjs/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
+  "files": [
+    "dist",
+    "test"
+  ],
   "types": "index.d.ts",
-  "jsdelivr": "./dist/tzlib.min.js",
+  "jsdelivr": "./dist/tzlib.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/add2cal/timezones-ical-library.git"
@@ -62,13 +66,12 @@
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run eslint:fix && npm run prettier:fix && npm run stylelint:fix",
     "test": "node test/tests.js",
-    "build-npm": "npx grunt npm",
     "build": "npx grunt"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-commonjs": "^1.0.2",
     "eslint-plugin-security": "^1.5.0",
@@ -81,7 +84,7 @@
     "grunt-file-creator": "^0.1.3",
     "grunt-version": "^3.0.0",
     "prettier": "^2.7.1",
-    "stylelint": "^14.14.0",
+    "stylelint": "^14.14.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^29.0.0"
   }
