--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timezones-ical-library",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "engines": {
     "node": ">=14.20.0"
   },
@@ -15,7 +15,8 @@
   },
   "files": [
     "dist",
-    "test"
+    "test",
+    "index.d.ts"
   ],
   "types": "index.d.ts",
   "jsdelivr": "./dist/tzlib.js",
