--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,11 @@
     "browser": true,
     "es2021": true
   },
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:security/recommended",
+    "plugin:security/recommended-legacy",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -25,7 +26,6 @@
       }
     ]
   },
-  "plugins": ["@typescript-eslint"],
   "ignorePatterns": ["*.min.*", "Gruntfile.js", "zonesdb.js", "generator.js", "set-release.js", "dist/"],
   "rules": {}
 }
