--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -10,7 +10,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
-      "@layouts/*": ["src/layouts/*"],
+      "@layouts/*": ["src/layouts/*"]
     },
     "plugins": [
       {
