--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timezones-ical-library-demo",
   "type": "module",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -22,36 +22,38 @@
   "dependencies": {
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
-    "@astrojs/vue": "^6.0.0-beta.0",
+    "@astrojs/vue": "^6.0.0-beta.1",
     "@fontsource/fira-mono": "^5.2.7",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/paytone-one": "^5.2.8",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "astro": "^6.0.0-beta.5",
+    "@tailwindcss/vite": "^4.2.0",
+    "astro": "^6.0.0-beta.14",
     "astro-expressive-code": "^0.41.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.2.0",
     "vite": "^7.3.1"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/ts-plugin": "^1.10.6",
-    "@eslint/js": "^9.39.2",
-    "@typescript-eslint/parser": "^8.54.0",
+    "@eslint/js": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "astro-compress": "^2.3.9",
-    "astro-eslint-parser": "^1.2.2",
-    "eslint": "^9.39.2",
-    "eslint-plugin-astro": "^1.5.0",
+    "astro-eslint-parser": "^1.3.0",
+    "eslint": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-astro": "^1.6.0",
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-regexp": "^3.0.0",
     "fs-extra": "^11.3.3",
-    "globals": "^17.2.0",
-    "jsdom": "^27.4.0",
+    "globals": "^17.3.0",
+    "jsdom": "^28.1.0",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.56.0"
   }
 }
