--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timezones-ical-library",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "engines": {
     "node": ">=22.20.0",
     "npm": ">=10.9.3"
@@ -71,16 +71,18 @@
     "test": "node test/tests.js && npx tsc"
   },
   "devDependencies": {
-    "esbuild": "^0.27.2",
-    "eslint": "^9.39.2",
+    "@eslint/js": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "esbuild": "^0.27.3",
+    "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-commonjs": "^1.0.2",
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-regexp": "^3.0.0",
-    "eslint-plugin-security": "^3.0.1",
-    "glob": "^13.0.0",
+    "eslint-plugin-security": "^4.0.0",
+    "glob": "^13.0.6",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.56.0"
   }
 }
